missing padding in fixed navbar
see http://stackoverflow.com/questions/20789868/bootstrap-3-navbar-right-no-padding-with-navbar-fixed-top
re #232

--- a/evap/static/css/evap.css
+++ b/evap/static/css/evap.css
@@ -5,6 +5,10 @@ body {
   /* The html and body elements cannot have any padding or margin. */
 }
 
+.navbar > .container {
+  width:auto;
+}
+
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
